----------------------------------
August 26 2025
- switched default model to x-ai/grok-code-fast-1
- minor cleanup/changes

grok-code-fast is looking like a good fit for this project. 
grok-4's brains were useful, but i think speed is more what i want from this 
tool. 

----------------------------------
August 22 2025
- added support for most common languages  

----------------------------------
July 10 2025
- switched from grok-3-mini-beta to grok-4 

grok-3-mini was about 1 cent, and grok-4 is about 11 cents. 
I think the upgrade is worth it. It is easy to switch via the config file 